# Manuel-Project3-regular

./: CMakeLists.txt  Floor.cpp  Floor.h  Parkinglot.cpp  Parkinglot.h  README-M1.txt  README.md  README.txt  Singleton.cpp  Singleton.h  Ticket.cpp  Ticket.h  Vehicle.cpp  Vehicle.h  VehicleType.txt  main.cpp  merge.cpp  merge.h  parkingLot.cpp  parkingLot.h  slot.cpp  slot.h  vector.cpp  vector.h
